--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "#Your code here\n",
     "def flat_list(L):\n",
-    "    if\n",
+    "    if type(L) == list:\n",
     "\n",
     "    \n",
     "    \n",
