--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,9 @@
    "source": [
     "#Your code here\n",
     "def flat_list(L):\n",
+    "    appen\n",
     "    if type(L) == list:\n",
+    "        \n",
     "\n",
     "    \n",
     "    \n",
