Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
     "def flat_list(L):\n",
     "    flatten = []\n",
     "    if type(L) == list:\n",
-    "        \n",
+    "        flatten.append()\n",
     "        \n",
     "\n",
     "    \n",
