Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,6 +137,7 @@
     "    flatten = []\n",
     "    if type(L) == list:\n",
     "        flatten.append(flat_list(L[0])\n",
+    "    else:\n",
     "        \n",
     "\n",
     "    \n",
