--- a/index.ipynb
+++ b/index.ipynb
@@ -136,8 +136,9 @@
     "def flat_list(L):\n",
     "    flatten = []\n",
     "    if type(L) == list:\n",
-    "        flatten.append(flat_list(L[0])\n",
+    "        return flatten.append(flat_list(L[0])\n",
     "    else:\n",
+    "                              return\n",
     "        \n",
     "\n",
     "    \n",
