Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,15 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-5e04047abc77>, line 11)",
+     "evalue": "invalid syntax (<ipython-input-2-666bef298ad0>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-5e04047abc77>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    flat_list([1,[1,2],3,4])\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-666bef298ad0>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
     "    if type(L) == list:\n",
     "        return flatten.append(flat_list(L[0])\n",
     "    else:\n",
-    "                              return\n",
+    "        return L\n",
     "        \n",
     "\n",
     "    \n",
