Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,24 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-666bef298ad0>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-666bef298ad0>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Your code here\n",
     "def flat_list(L):\n",
     "    flatten = []\n",
     "    if type(L) == list:\n",
-    "        return flatten.append(flat_list(L[0])\n",
+    "        return flatten.append(flat_list(L[0]))\n",
     "    else:\n",
     "        return L\n",
     "        \n",
