--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
     "    if type(L[0]) == list:\n",
     "        return flatten.append(flat_list(L[0]))\n",
     "    else:\n",
-    "        return flatten.append(flat_line[]\n",
+    "        return flatten.append(flat_line[L[0]))\n",
     "        \n",
     "\n",
     "    \n",
