Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
     "    if type(L[0]) == list:\n",
     "        return flatten.append(flat_list(L[1:]))\n",
     "    else:\n",
-    "        return flatten.append(flat_list[L[0]])\n",
+    "        return flat_list[]\n",
     "        \n",
     "\n",
     "    \n",
